--- a/report/arara.yaml
+++ b/report/arara.yaml
@@ -1,3 +1,4 @@
 !database
 map: 
   'C:\Users\flavi\Desktop\ParallelComputing\HOMEWORKS\PC-Homework-3\report\build\report.bbl': 234821543
+  'C:\Users\loren\Desktop\ParallelComputing\PC-Homework-3\report\build\report.bbl': 4287577630
